# Blackfong-Installer

./: .blackfong-state.json  README.md  build_config.yaml  pyproject.toml
.tmp_installer/: state.json
assets/sudoers.d/: blackfong-single-user
assets/systemd/: blackfong-installer-live.service  daise.service
assets/udev/: 99-blackfong-daise.rules
blackfong_installer/: __init__.py  build.py  build_config.py  build_state.py  build_steps.py  logging_utils.py  main.py  pipeline.py  state_store.py
blackfong_installer/lib/: apt_repo.py  assets.py  block.py  bootloader.py  chroot.py  command.py  env.py  firmware.py  fstab.py  hwdetect.py  manifests.py  net.py  pkg.py  storage.py
blackfong_installer/steps/: __init__.py  step_10_detect_hardware.py  step_20_partition_fs.py  step_25_write_fstab.py  step_30_install_kernel.py  step_35_install_bootloader.py  step_40_install_rootfs.py  step_50_configure_services.py  step_55_apply_assets.py  step_60_install_desktop.py  step_70_install_features.py  step_80_post_install_checks.py  step_90_finalize_reboot.py
code_warden/: __init__.py  audit.py  cli.py  exec.py  fs.py  patch.py
manifests/: base.yaml  desktop.yaml  features.yaml
manifests/profiles/: amd64-pc.yaml  amd64-steamdeck.yaml  arm64-pi.yaml  arm64-uconsole.yaml  armhf-legacy.yaml
scripts/: build.py  build.sh  build_installer_media_amd64_efi.sh  build_installer_media_arm64_img.sh  build_installer_media_armhf_img.sh  build_media_layout.sh  preflight.sh
ui/: __init__.py  cli.py  gui_stub.py
